Fix fonts on firefox

--- a/data/style.css
+++ b/data/style.css
@@ -1,5 +1,4 @@
 * {
-	font-family: 'Times New Roman';
 	font-size: 12pt;
 }
 
